--- a/Transportador/Views/Transportadora/Create.cshtml
+++ b/Transportador/Views/Transportadora/Create.cshtml
@@ -23,6 +23,15 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.ClassificacaoId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-6">
+                @Html.DropDownListFor(model => model.ClassificacaoId, new SelectList(Model.Classificacao, "Id", "Nome"), "Selecione" , Model.ClassificacaoId)
+                @Html.ValidationMessageFor(model => model.ClassificacaoId, "", new { @class = "text-danger" })
+            </div>
+
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Gravar" class="btn btn btn-primary" />
             </div>
